Sec43_Chap404: implemented get Beer by ID