@@ -15,7 +15,6 @@ import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.client.RestClientTest;
 import org.springframework.boot.test.context.TestConfiguration;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.web.client.MockServerRestTemplateCustomizer;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.context.annotation.Bean;
@@ -32,6 +31,7 @@ import org.springframework.security.oauth2.client.registration.ClientRegistratio
 import org.springframework.security.oauth2.client.registration.InMemoryClientRegistrationRepository;
 import org.springframework.security.oauth2.core.AuthorizationGrantType;
 import org.springframework.security.oauth2.core.OAuth2AccessToken;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestClient;
@@ -41,7 +41,7 @@ import org.springframework.web.util.UriComponentsBuilder;
 import java.math.BigDecimal;
 import java.net.URI;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -79,7 +79,7 @@ public class BeerClientMockTest {
     BeerDTO dto;
     String dtoJson;
 
-    @MockBean
+    @MockitoBean
     OAuth2AuthorizedClientManager manager;
 
     @TestConfiguration
@@ -135,7 +135,7 @@ public class BeerClientMockTest {
     void testListBeersWithQueryParam() throws JsonProcessingException {
         String response = objectMapper.writeValueAsString(getPage());
 
-        URI uri = UriComponentsBuilder.fromHttpUrl(URL + BeerClientImpl.GET_BEER_PATH)
+        URI uri = UriComponentsBuilder.fromUriString(URL + BeerClientImpl.GET_BEER_PATH)
                 .queryParam("beerName", "ALE")
                 .build().toUri();
 
@@ -148,20 +148,20 @@ public class BeerClientMockTest {
         Page<BeerDTO> responsePage = beerClient
                 .listBeers("ALE", null, null, null, null);
 
-        assertThat(responsePage.getContent().size()).isEqualTo(1);
+        assertThat(responsePage.getContent()).hasSize(1);
     }
 
     @Test
     void testDeleteNotFound() {
+        UUID uuid = dto.getId();
         server.expect(method(HttpMethod.DELETE))
                 .andExpect(requestToUriTemplate(URL + BeerClientImpl.GET_BEER_BY_ID_PATH,
-                        dto.getId()))
+                        uuid))
                 .andExpect(header("Authorization", BEARER_TEST))
                 .andRespond(withResourceNotFound());
 
-        assertThrows(HttpClientErrorException.class, () -> {
-            beerClient.deleteBeer(dto.getId());
-        });
+        assertThrows(HttpClientErrorException.class, () ->
+                beerClient.deleteBeer(uuid));
 
         server.verify();
     }
@@ -236,7 +236,7 @@ public class BeerClientMockTest {
                 .andRespond(withSuccess(payload, MediaType.APPLICATION_JSON));
 
         Page<BeerDTO> dtos = beerClient.listBeers();
-        assertThat(dtos.getContent().size()).isGreaterThan(0);
+        assertThat(dtos.getContent()).hasSizeGreaterThan(0);
     }
 
     BeerDTO getBeerDto(){
@@ -250,7 +250,7 @@ public class BeerClientMockTest {
                 .build();
     }
 
-    BeerDTOPageImpl getPage(){
-        return new BeerDTOPageImpl(Arrays.asList(getBeerDto()), 1, 25, 1);
+    BeerDTOPageImpl<List<BeerDTO>> getPage(){
+        return new BeerDTOPageImpl<>(List.of(getBeerDto()), 1, 25, 1);
     }
 }
